--- a/src/app/modules/pokemon/pokemon-card-list/pokemon-card-list.component.html
+++ b/src/app/modules/pokemon/pokemon-card-list/pokemon-card-list.component.html
@@ -1,7 +1,7 @@
-<div class="card" style="width: 18rem; box-shadow: 0 2px 2px rgba(0, 0, 0, .2);">
+<div class="card pokemon-card">
   
-  <img class="mx-auto" src="../assets/pokeload.gif" [hidden]="show" style="height: 96px; width: 96px;">
-  <img class="mx-auto" [src]="pokemon.sprites.front_default" [hidden]="!show" (load)="onImageLoad()">
+  <img class="mx-auto pokemon-image" src="../assets/pokeload.gif" [hidden]="show">
+  <img class="mx-auto pokemon-image" [src]="pokemon.sprites.front_default" [hidden]="!show" (load)="onImageLoad()">
   
   <div class="card-body">
     
