--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,32 +4,10 @@
 
 <div class="container">
   <div class="row">
-    <app-pokemon-card-list class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 mt-4 ol d-flex justify-content-center" *ngFor="let pokemon of pokemons | async" [pokemon]="pokemon"></app-pokemon-card-list>
-  </div>
-</div>
-
-<!--<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal">
-  Launch demo modal
-</button>-->
-
-<div class="modal" tabindex="-1" role="dialog" id="modal">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <p>Modal body text goes here.</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary">Save changes</button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      </div>
-    </div>
+    <app-pokemon-card-list class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 mt-4 ol d-flex justify-content-center" *ngFor="let pokemon of pokemons | async" [pokemon]="pokemon" (abilitiesEventClicked)="childAbilitiesEventClicked($event)"></app-pokemon-card-list>
   </div>
 </div>
 
 <app-footer></app-footer>
+
+<app-pokemon-abilities-modal [abilitiesEvent]="clickedAbilitiesEvent"></app-pokemon-abilities-modal>
