--- a/src/app/modules/pokemon/pokemon-card-list/pokemon-card-list.component.html
+++ b/src/app/modules/pokemon/pokemon-card-list/pokemon-card-list.component.html
@@ -1,6 +1,6 @@
 <div class="card pokemon-card">
   
-  <img class="mx-auto pokemon-image" src="../assets/pokeload.gif" [hidden]="show">
+  <img class="mx-auto pokemon-image" src="/assets/images/pokeload.gif" [hidden]="show">
   <img class="mx-auto pokemon-image" [src]="pokemon.sprites.front_default" [hidden]="!show" (load)="onImageLoad()">
   
   <div class="card-body">
@@ -56,7 +56,10 @@
     
     <div class="row text-center">
       <div class="col">
-        <button class="btn btn-success btn-xs">Abilities</button>
+        <button type="button" class="btn btn-success btn-xs" data-toggle="modal" data-target="#modal" (click)="onAbilitiesClick($event)">
+          Abilities
+        </button>
+        <!--<button class="btn btn-success btn-xs">Abilities</button>-->
       </div>
       <div class="col">
         <button class="btn btn-secondary btn-xs">Species</button>
